# fastapi_playground

./: .mise.toml  README.md  pyproject.toml
src/fastapi_playground/: __main__.py  app.py
src/fastapi_playground/database/: sqlite.py
src/fastapi_playground/models/: user.py
src/fastapi_playground/routers/: task.py
src/playground/: main.py
