[project]
name = "playground"
version = "0.1.0"
description = "Playground FastAPI and sqlalchemy"
authors = [
    {name = "yasunori0418", email = "yasunori.kirin0418@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.2",
    "sqlalchemy>=2.0.29",
    "uvicorn[standard]>=0.29.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "debugpy>=1.8.1",
]

[tool.pdm.scripts]
start.cmd = "uvicorn main:app --reload"
start.working_dir = "src/playground"
